# omega_playground

./: CMakeLists.txt  LICENSE.txt  README.md  apply_clang_format.sh  prepare_build.sh
asm/: CMakeLists.txt  ke_grad.cpp
benchmark/: CMakeLists.txt  benchmark.cpp
cmake/: FindNetCDF.cmake
exp/: CMakeLists.txt  steady_zonal.cpp
experiment/: CMakeLists.txt  cosine_bell.cpp  steady_zonal.cpp
machines/: aurora-gpu.cmake  aurora-gpu.env  blake-cpu-clang.cmake  blake-cpu-clang.env  blake-cpu-gcc.cmake  blake-cpu-gcc.env  blake-cpu-gnu.cmake  blake-cpu-gnu.env  blake-cpu-intel.cmake  blake-cpu-intel.env  blake-cpu-scalar.env  blake-cpu-yakl-packs.env  blake-cpu.env  blake-h100-gcc.cmake  blake-h100-gcc.env  blake-h100-gnu.cmake  blake-h100.cmake  blake-h100.env  blake-pvc-intel.cmake  blake-pvc-intel.env  blake-pvc.cmake  blake-pvc.env  blake-sapphirerapids.env  crusher.cmake  crusher.env  frontier-cpu-amdclang.cmake  frontier-cpu-amdclang.env  frontier-cpu-cxx-simd.env  frontier-cpu-gcc.cmake  frontier-cpu-gcc.env  frontier-cpu-scalar.env  frontier-cpu-yakl-packs.env  frontier-cpu.env  frontier-gpu-amdclang.cmake  frontier-gpu-amdclang.env  frontier-gpu.cmake  frontier-gpu.env  frontier-mi250x.env  frontier.cmake  liczydlo-cpu-clang.cmake  (+21 more)
scripts/: run_thread_scaling.sh
scripts/blake/: submit_cpu_performance.sh  submit_h100_performance.sh  submit_pvc_performance.sh  submit_thread_scaling.sh
scripts/frontier/: submit_cpu_performance.sh  submit_gpu_performance.sh  submit_performance.sh  submit_thread_scaling.sh
scripts/sunspot/: submit_thread_scaling.sh
src/: CMakeLists.txt  common.hpp  driver.cpp  file_mesh.cpp  file_mesh.hpp  hexagonal_periodic_mesh.hpp  linear_swe.cpp  lsrk.cpp  mpas_mesh.cpp  mpas_mesh.hpp  omega.hpp  planar_hexagonal_mesh.cpp  planar_hexagonal_mesh.hpp  rk4.cpp  shallow_water.cpp  shallow_water.hpp  shallow_water_hierarchical.cpp  shallow_water_vectorized.cpp  shallow_water_vectorized_cxx_simd.cpp  shallow_water_vectorized_yakl_packs.cpp  time_stepper.cpp  time_stepper.hpp
src/mesh/: CMakeLists.txt  file_mesh.cpp  file_mesh.hpp  mpas_mesh.cpp  mpas_mesh.hpp  planar_hexagonal_mesh.cpp  planar_hexagonal_mesh.hpp
src/model/: CMakeLists.txt  shallow_water_auxstate.cpp  shallow_water_auxstate.hpp  shallow_water_diagnostics.cpp  shallow_water_diagnostics.hpp  shallow_water_model.cpp  shallow_water_model.hpp  shallow_water_params.hpp  shallow_water_state.cpp  shallow_water_state.hpp
src/model/auxiliary_vars/: CMakeLists.txt  auxiliary_vars.hpp  drag_thickness_edge.cpp  drag_thickness_edge.hpp  flux_thickness_edge.cpp  flux_thickness_edge.hpp  kinetic_aux.hpp  kinetic_energy_cell.cpp  kinetic_energy_cell.hpp  mean_thickness_edge.cpp  mean_thickness_edge.hpp  norm_coriolis_edge.cpp  norm_coriolis_edge.hpp  norm_coriolis_vertex.cpp  norm_coriolis_vertex.hpp  norm_rvort_edge.cpp  norm_rvort_edge.hpp  norm_rvort_vertex.cpp  norm_rvort_vertex.hpp  norm_tr_cell.cpp  norm_tr_cell.hpp  rvort_vertex.cpp  rvort_vertex.hpp  thickness_aux.hpp  tracer_aux.hpp  tracer_del2_cell.cpp  tracer_del2_cell.hpp  vel_del2_div_cell.cpp  vel_del2_div_cell.hpp  vel_del2_edge.cpp  vel_del2_edge.hpp  vel_del2_rvort_vertex.cpp  vel_del2_rvort_vertex.hpp  vel_div_cell.cpp  vel_div_cell.hpp  vorticity_aux.hpp
src/model/tendency_terms/: ke_grad_edge.hpp  pv_flux_edge.hpp  ssh_grad_edge.hpp  tendency_terms.hpp  thickness_hadv_cell.hpp  tracer_diff_cell.hpp  tracer_hadv_cell.hpp  tracer_hyperdiff_cell.hpp  vel_diff_edge.hpp  vel_hyperdiff_edge.hpp
src/time_integration/: CMakeLists.txt  lsrk.cpp  rk4.cpp  time_stepper.hpp
test/: CMakeLists.txt  cosine_bell.cpp  double_vortex.cpp  linear_swe_convergence.cpp  nonlinear_swe_convergence.cpp  operator_convergence.cpp  tracer_advection_convergence.cpp  tracer_diffusion_convergence.cpp  tracer_hyperdiffusion_convergence.cpp
